# libeuler

./: CMakeLists.txt  Jenkinsfile  README.md
cmake/: EulerConfig.cmake.in
include/euler/: euler.h
jenkins/: test.sh
src/: euler.cpp
test/: CMakeLists.txt
test/src/: test_euler.cpp
